# Alembic

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  alembic.db  build.sh  docker-compose.yml
.github/workflows/: docker.yml
crates/alembic-aggregate/: Cargo.toml
crates/alembic-aggregate/src/: aggregator.rs  lib.rs
crates/alembic-api/: Cargo.toml
crates/alembic-api/src/: handlers.rs  lib.rs  models.rs
crates/alembic-core/: Cargo.toml
crates/alembic-core/src/: config.rs  db.rs  lib.rs  schema.sql
crates/alembic-ingest/: Cargo.toml
crates/alembic-ingest/src/: handlers.rs  lib.rs  models.rs
crates/alembic-server/: Cargo.toml
crates/alembic-server/src/: main.rs
web/: package.json  tailwind.config.mjs  tsconfig.json
web/.astro/: settings.json
web/src/components/: Dashboard.tsx  DataTrustBanner.tsx  StatsCard.tsx
web/src/layouts/: Layout.astro
web/src/pages/: index.astro  settings.astro  stats.astro
web/src/styles/: global.css
