[package]
name = "alembic-server"
version = "0.1.0"
edition = "2021"

[dependencies]
alembic-core = { workspace = true }
alembic-ingest = { workspace = true }
alembic-aggregate = { workspace = true }
alembic-api = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rust-embed = { workspace = true }
mime_guess = "2.0.5"
anyhow = "1.0.100"
tower_governor = "0.4.2"

